Removing old templates and adding quick permissions listing on repository page.

--- a/app/pages.yml
+++ b/app/pages.yml
@@ -115,6 +115,7 @@ services:
       - @layout
       - @repository.repo
       - @deployment.repo
+      - @permissions
   repository.twig:
     parent: 'twig.template'
     arguments: ['repository/repository.twig']
