--- a/app/routes.yml
+++ b/app/routes.yml
@@ -284,7 +284,7 @@ parameters:
         id:       '[\d]+'
 
     repository.deployment.admin.remove.handle:
-      method:     'POST'
+      method:     'GET'
       route:      '/repositories/:repoId/deployments/:id/remove'
       stack:      ['login.bouncer', 'admin.bouncer', 'repository.deployment.admin.remove.handle']
       conditions:
