Breaking build permissions from push permissions. Any user associated with a repo can build, or admins.

--- a/app/di.yml
+++ b/app/di.yml
@@ -176,6 +176,7 @@ services:
       - @deployment.repo
       - @repository.repo
       - @user.repo
+      - @environment.repo
       - @github
       - @cache
       - '%debug.godmode%'
