Adding ability to manually generate doctrine proxies. Moving doctrine proxy cache location. Adding doctrine proxy generation to deployment script.

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@
 /app/config.yml
 /src/QL/Hal/CachedContainer.php
 
+# doctrine cache
+/app/cache/*
+
 /.vagrant
 
 # dumb atlassian sourcetree file that keeps re-creating itself
