--- a/app/config.test.yml
+++ b/app/config.test.yml
@@ -6,7 +6,7 @@ imports:
 parameters:
   debug: false
 
-  doctrine.devmode: true
+  doctrine.devmode: false
   doctrine.connection:
     driver:         pdo_mysql
     host:           test.example.com
