--- a/app/routes.yml
+++ b/app/routes.yml
@@ -61,6 +61,11 @@ parameters:
       conditions:
         page: "[0-9]+"
 
+    queue:
+      method: 'GET'
+      route: '/queue'
+      stack: ['login.bouncer', 'queue.page']
+
     ########################################################################################################################
     # BUILD ROUTES
     ########################################################################################################################
