Laying framework for display of relative dates. Filter 'reltime' has been added, but doesn't work yet - it just wraps 'date'.

--- a/app/di.yml
+++ b/app/di.yml
@@ -129,6 +129,9 @@ services:
     arguments:
       - @service_container
 
+  time.helper:
+    class: 'QL\Hal\Helpers\TimeHelper'
+
   clock:
     class: 'MCP\DataType\Time\Clock'
     arguments: ['now', 'UTC']
@@ -144,6 +147,7 @@ services:
       - @permissions
       - @url.helper
       - @github
+      - @time.helper
 
   # Twig Loader
   twigLoader:
