Some basic personalized repository cards for the welcome page. #76

--- a/app/pages.yml
+++ b/app/pages.yml
@@ -8,6 +8,7 @@ services:
       - @hello.twig
       - @layout
       - @user
+      - @permissions
   hello.twig:
     parent: 'twig.template'
     arguments: ['hello.twig']
