Laying the groundwork for listing pending work on the hello page. Doesn't display nicely or show the correct information yet.

--- a/app/pages.yml
+++ b/app/pages.yml
@@ -9,6 +9,7 @@ services:
       - @layout
       - @user
       - @permissions
+      - @doctrine.em
   hello.twig:
     parent: 'twig.template'
     arguments: ['hello.twig']
