Force confirm when removing entities. Confirm page is on GET of the same route as the actual POST handle route. Does not resolve #89. fixes #87

--- a/app/pages.yml
+++ b/app/pages.yml
@@ -1,6 +1,14 @@
 # Application specific endpoints and controllers go here
 services:
 
+  delete.confirm.page:
+    class: 'QL\Hal\Controllers\StaticController'
+    arguments:
+      - @delete.confirm.twig
+  delete.confirm.twig:
+    parent: 'twig.template'
+    arguments:
+      - 'delete.confirm.twig'
 
   hello.page:
     class: 'QL\Hal\Controllers\HelloController'
@@ -33,6 +41,7 @@ services:
   logout.handle:
     class: 'QL\Hal\Controllers\LogoutController'
     arguments: ['@session', '@url.helper']
+
 
   ######################################################################################################################
   # GROUP CONTROLLERS
