--- a/app/routes.yml
+++ b/app/routes.yml
@@ -41,6 +41,11 @@ parameters:
       route: '/help/deployment'
       stack: ['help.deployment.page']
 
+    help.api:
+      method: 'GET'
+      route: '/help/api'
+      stack: ['help.api.page']
+
     admin.dashboard:
       method: 'GET'
       route: '/admin'
